--- a/src/app/componentes/not-found-page/not-found-page.component.html
+++ b/src/app/componentes/not-found-page/not-found-page.component.html
@@ -1,3 +1,10 @@
-<p>
-  not-found-page works!
-</p>
+<div class="row">
+  <div class="col-md-6 mx-auto text-center">
+    <h1>Oops!</h1>
+    <h2>404 Página no encontrada</h2>
+    <div class="card-body">
+      <a href="/" class="btn btn-primary btn-lg"><i class="fa fa-home"></i>Ir a a la home Page</a>
+
+    </div>
+  </div>
+</div>
