--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -9,14 +9,14 @@
       <li class="nav-item active">
         <a class="nav-link" href="#" routerLink="/">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!isLogin" >
         <a class="nav-link" href="#" routerLink="/login">Login</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!isLogin" >
         <a class="nav-link" href="#" routerLink="/register">Registrarse</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" >Salir</a>
+      <li class="nav-item" *ngIf="isLogin" >
+        <a class="nav-link" href="#" (click)="onClickLogout()">Salir</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
